--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "electron-react-typescript",
-  "author": "Diego Fernandes <diego.schell.f@gmail.com>",
-  "version": "2.0.0",
-  "description": "An Electron boilerplate including TypeScript, React, Jest and ESLint.",
+  "author": "Matheus Thiesen <matheusreis314@gmail.com>",
+  "version": "1.0.0",
+  "description": "Multiple file changer",
   "main": "./.webpack/main/index.js",
   "scripts": {
     "start": "electron-forge start",
@@ -15,10 +15,14 @@
   "keywords": [],
   "license": "MIT",
   "dependencies": {
+    "filesize": "^6.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-dropzone": "^11.3.4",
     "react-hot-loader": "4.13.0",
-    "styled-components": "5.3.0"
+    "react-icons": "^4.2.0",
+    "styled-components": "5.3.0",
+    "xlsx": "^0.17.0"
   },
   "devDependencies": {
     "@babel/core": "7.14.6",
@@ -37,6 +41,7 @@
     "@testing-library/react": "11.2.7",
     "@types/electron-devtools-installer": "2.2.0",
     "@types/jest": "26.0.23",
+    "@types/node": "^16.0.0",
     "@types/react": "17.0.11",
     "@types/react-dom": "17.0.8",
     "@types/styled-components": "5.1.10",
