--- a/package.json
+++ b/package.json
@@ -69,8 +69,8 @@
   "config": {
     "forge": {
       "packagerConfig": {
-        "name": "Electron starter",
-        "executableName": "electron-starter",
+        "name": "Alteração de arquivos",
+        "executableName": "electron-file-utility",
         "icon": "assets/icon",
         "extraResource": [
           "assets"
@@ -101,7 +101,7 @@
         {
           "name": "@electron-forge/maker-squirrel",
           "config": {
-            "name": "Electron Starter"
+            "name": "Alteração de arquivos"
           }
         },
         {
