--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron-react-typescript",
+  "name": "ManipuladorArquivos",
   "author": "Matheus Thiesen <matheusreis314@gmail.com>",
   "version": "1.0.0",
   "description": "Multiple file changer",
