--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
+    "app": "npx electron-packager . --icon assets/icon.png --out=packages",
     "release": "electron-forge publish",
     "lint": "eslint . --ext js,ts",
     "test": "jest"
